--- a/app/src/main/res/layout/fragment_numbers_linear.xml
+++ b/app/src/main/res/layout/fragment_numbers_linear.xml
@@ -3,16 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_margin="16dp"
         android:layout_weight="1"
         android:lines="2"
         android:maxLines="2"
@@ -24,10 +21,9 @@
         android:id="@+id/tvNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_margin="16dp"
         android:layout_weight="1"
+        android:lines="2"
         android:maxLines="2"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
